--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@supabase/supabase-js": "^2.50.2",
+    "@uploadthing/react": "^7.3.2",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.17.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "uploadthing": "^7.7.3",
     "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
